--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "@prisma/client": "^3.13.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "nodemailer": "^6.7.5",
-    "prisma": "^3.13.0"
+    "nodemailer": "^6.7.5"
   }
 }
